--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nakedape.mixmaticlooppad" >
+    package="com.nakedape.mixmaticlooppadpro" >
     <!-- Required permission to check licensing. -->
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
@@ -18,10 +18,9 @@
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme" >
-        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version" />
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
-            android:name="com.nakedape.mixmaticlooppad.SampleEditActivity"
+            android:name="com.nakedape.mixmaticlooppadpro.SampleEditActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -32,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nakedape.mixmaticlooppad.LaunchPadActivity"
+            android:name="com.nakedape.mixmaticlooppadpro.LaunchPadActivity"
             android:label="@string/title_activity_launch_pad" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -41,13 +40,9 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nakedape.mixmaticlooppad.EditPreferencesActivity"
+            android:name="com.nakedape.mixmaticlooppadpro.EditPreferencesActivity"
             android:label="@string/title_activity_sample_edit_preferences" >
         </activity>
-        <activity android:name="com.amazon.device.ads.AdActivity" android:configChanges="keyboardHidden|orientation|screenSize"/>
-        <activity android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:theme="@android:style/Theme.Translucent" />
     </application>
 
 </manifest>
