Update to add sample pack store

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nakedape.mixmaticlooppadpro" >
+    package="com.nakedape.mixmaticlooppad" >
     <!-- Required permission to check licensing. -->
     <uses-permission android:name="com.android.vending.CHECK_LICENSE" />
 
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme" >
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <activity
-            android:name="com.nakedape.mixmaticlooppadpro.SampleEditActivity"
+            android:name="com.nakedape.mixmaticlooppad.SampleEditActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -31,7 +31,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nakedape.mixmaticlooppadpro.LaunchPadActivity"
+            android:name="com.nakedape.mixmaticlooppad.LaunchPadActivity"
             android:label="@string/title_activity_launch_pad" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -40,7 +40,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.nakedape.mixmaticlooppadpro.EditPreferencesActivity"
+            android:name="com.nakedape.mixmaticlooppad.EditPreferencesActivity"
             android:label="@string/title_activity_sample_edit_preferences" >
         </activity>
     </application>
