--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.0'
+    compileSdkVersion 25
+    buildToolsVersion '23.0.3'
     defaultConfig {
         applicationId 'com.nakedape.mixmaticlooppad'
         minSdkVersion 16
-        targetSdkVersion 23
+        targetSdkVersion 25
         versionCode 36
         versionName '1.5'
     }
@@ -21,17 +21,17 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:support-v4:25.0.1'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.google.firebase:firebase-core:9.8.0'
     compile 'com.google.firebase:firebase-storage:9.8.0'
     compile 'com.google.firebase:firebase-auth:9.8.0'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    // FirebaseUI Auth only
+    compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.firebaseui:firebase-ui-auth:1.0.0'
+    compile 'com.android.support:design:25.0.1'
 }
 repositories {
-    // ...
+    //maven { url '// ...' }
     maven { url 'https://maven.fabric.io/public' }
 }
 apply plugin: 'com.google.gms.google-services'
