--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.firebaseui:firebase-ui-auth:1.0.0'
     compile 'com.android.support:design:25.0.1'
+    compile 'com.google.firebase:firebase-ads:9.8.0'
 }
 repositories {
     //maven { url '// ...' }
