--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,22 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="com.android.vending.BILLING" />
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+            android:value="@string/facebook_application_id" />
 
         <activity
             android:name=".SampleEditActivity"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:parentActivityName=".LaunchPadActivity">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
 
@@ -49,7 +51,8 @@
             android:label="@string/title_activity_sample_edit_preferences">
 
         </activity>
-        <activity android:name=".StoreActivity">
+        <activity android:name=".StoreActivity"
+            android:parentActivityName=".LaunchPadActivity">
 
         </activity>
     </application>
